Projeto para portfólio (tela de login e area de cadastro de exames) -> criando estrutura html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,3 +23,10 @@ body {
   font-family: var(--font);
   background-color: var(--color-primary);
 }
+
+/* CONTAINER */
+.container {
+  display: flex;
+  width: var(--width-content);
+  height: var(--height-container);
+}
